envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8009 # El puerto en el que Envoy escucha
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/Account"
                          route:
                            cluster: multitrabajos-accounts
                        - match:
                            prefix: "/api/Transaction/Deposit"
                          route:
                            cluster: multitrabajos-deposit
                        - match:
                            prefix: "/api/Withdrawal/Retiros"
                          route:
                            cluster: multitrabajos-withdrawal
                        - match:
                            prefix: "/api/Notification"
                          route:
                            cluster: multitrabajos-rc-notificacion
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: multitrabajos-accounts
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multitrabajos-accounts
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multitrabajos-accounts
                      port_value: 8081

    - name: multitrabajos-deposit
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multitrabajos-deposit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multitrabajos-deposit
                      port_value: 8082

    - name: multitrabajos-withdrawal
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multitrabajos-withdrawal
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multitrabajos-withdrawal
                      port_value: 8083

    - name: multitrabajos-rc-notificacion
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multitrabajos-rc-notificacion
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multitrabajos-rc-notificacion
                      port_value: 8084
